--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <li>Instalace a opravy vodovodních rozvodů</li>
                 <li>Montáže topných systémů (radiátory, podlahové topení)</li>
                 <li>Výměna kotlů a bojlerů</li>
-                <li>Havarijní servis 24/7</li>
+                <li>Havarijní servis</li>
             </ul>
         </section>
 
         <section id="kontakt">
             <h2>Kontakt</h2>
             <p><strong>Skala</strong></p>
-            <p>Tel: <a href="tel:+420123456789">+420 123 456 789</a></p>
-            <p>Email: <a href="mailto:info@voda-topeni-skala.cz">info@voda-topeni-skala.cz</a></p>
-            <p>Oblast působnosti: Praha a okolí</p>
+            <p>Tel: <a href="tel:+420123456789">+420 732 124 240</a></p>
+            <p>Email: <a href="mailto:vodatopeniskala@gamil.com">info@voda-topeni-skala.cz</a></p>
+            <p>Oblast působnosti: Písek a okolí</p>
         </section>
     </main>
 
