--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>Kontakt</h2>
             <p><strong>Skala</strong></p>
             <p>Tel: <a href="tel:+420123456789">+420 732 124 240</a></p>
-            <p>Email: <a href="mailto:vodatopeniskala@gamil.com">info@voda-topeni-skala.cz</a></p>
+            <p>Email: <a href="mailto:vodatopeniskala@gamil.com">vodatopeniskala@gmail.com</a></p>
             <p>Oblast působnosti: Písek a okolí</p>
         </section>
     </main>
